--- a/angular/_pxb-component-theme.scss
+++ b/angular/_pxb-component-theme.scss
@@ -1,5 +1,6 @@
 // Import library functions for theme creation.
 @import '~@angular/material/theming';
+@import '~@pxblue/colors/palette.scss';
 
 @mixin pxb-components-theme($theme) {
     @include pxb-empty-state-theme($theme);
@@ -20,7 +21,7 @@
     .pxb-score-card {
         .pxb-score-card-header {
             background-color: mat-color($primary);
-            color: map-get($foreground, light);
+            color: map-get($pxb-white, 50);
             .mat-card-subtitle {
                 color: inherit;
             }
@@ -75,7 +76,7 @@
     $foreground: map-get($theme, foreground);
     .pxb-list-item-tag {
         background-color: mat-color($primary);
-        color: map-get($foreground, light);
+        color: map-get($pxb-white, 50);
     }
 }
 
@@ -97,11 +98,9 @@
     $foreground: map-get($theme, foreground);
     $background: map-get($theme, background);
     .pxb-drawer {
-        background-color: map-get($background, base);
-
         .pxb-drawer-header-content {
             background-color: mat-color($primary);
-            color: map-get($foreground, light);
+            color: map-get($pxb-white, 50);
         }
 
         .pxb-drawer-nav-group .mat-list-base {
