Checkbox label and box uses black300 at 36%

--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -57,6 +57,9 @@
             }
         }
     }
+    .mat-checkbox-disabled:not(.mat-checkbox-checked) .mat-checkbox-frame {
+        border-color: map-get($foreground, disabled);
+    }
 
     /* radio button */
     .mat-radio-button.mat-primary {
