--- a/angular/theme.scss
+++ b/angular/theme.scss
@@ -117,9 +117,9 @@ $pxb-blue-theme: pxb-light-theme($pxb-blue-primary, $pxb-blue-accent, $pxb-blue-
                 base: map-get($pxb-white, 50),
                 divider: $light-dividers,
                 dividers: $light-dividers,
-                disabled: $light-disabled-text,
+                disabled: rgba(123, 131, 135, 0.36),
                 disabled-button: rgba(white, 0.3),
-                disabled-text: $light-disabled-text,
+                disabled-text: rgba(123, 131, 135, 0.36),
                 elevation: map-get($pxb-darkBlack, 900),
                 icon: map-get($pxb-black, 50),
                 icons: map-get($pxb-black, 50),
